# bare-metal-rust-rv-template

./: Cargo.toml  LICENSE  README.md  generate_outputs.sh
.cargo/: config.toml
res/: memory.ld  memory_with_rom.ld
src/: init.s  ioregisters.rs  main.rs
